# haskell-unboxed-vector-ARR-WORDS-repro

./: README.md  haskell-unboxed-vector-ARR-WORDS-repro.cabal  shell.nix
app/: Main.hs
