name:                haskell-unboxed-vector-ARR-WORDS-repro
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

executable repro
  default-language: Haskell2010
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
      base
    , hmatrix
    , vector
    , vector-th-unbox
  ghc-options:
    -Wall -threaded -rtsopts
